--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ dependencies:
   
   # Utilitas
   uuid: ^4.3.3
+  geolocator: ^11.0.0
+  geocoding: ^2.2.0
+  hijri: ^3.0.0
   
   # Firebase
   firebase_core: ^3.13.0
