--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   provider: ^6.1.1
   
   # Format tanggal dan waktu
-  intl: ^0.20.2
+  # intl: ^0.20.2
   
   # UI components
   flutter_slidable: ^4.0.0
@@ -90,6 +90,7 @@ dependencies:
   
   # Sharing functionality
   share_plus: ^7.2.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -122,7 +123,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
     - assets/icons/
     - assets/fonts/
 
